--- a/app/templates/modules/header.html
+++ b/app/templates/modules/header.html
@@ -1,112 +1,109 @@
 {% load static %}
 <!--::header part start::-->
-    <header class="main_menu home_menu">
-        <div class="container-fluid">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-lg-11">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+<header class="main_menu home_menu">
+    <div class="container-fluid">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-lg-11">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="index.html"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
 
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'index' %}">Home</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Shop
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="{% url 'category'  %}"> shop category</a>
-                                        <a class="dropdown-item" href="{% url 'single-product'  %}">product details</a>
-                                        
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                    <a class="dropdown-item" href="{% url 'category'  %}"> shop category</a>
+                                    <a class="dropdown-item" href="{% url 'single-product'  %}">product details</a>
+
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         pages
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="{% url 'user_login' %}"> 
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                    <a class="dropdown-item" href="{% url 'user_login' %}"> 
                                             login
                                             
                                         </a>
-                                        <a class="dropdown-item" href="{% url 'tracking' %}">tracking</a>
-                                        <a class="dropdown-item" href="{% url 'checkout' %}">product checkout</a>
-                                        <a class="dropdown-item" href="{% url 'cart' %}">shopping cart</a>
-                                        <a class="dropdown-item" href="{% url 'confirmation' %}">confirmation</a>
-                                    </div>
-                                </li>
-                                
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="dropdown-item" href="{% url 'tracking' %}">tracking</a>
+                                    <a class="dropdown-item" href="{% url 'checkout' %}">product checkout</a>
+                                    <a class="dropdown-item" href="{% url 'cart' %}">shopping cart</a>
+                                    <a class="dropdown-item" href="{% url 'confirmation' %}">confirmation</a>
+                                </div>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         blog
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="{% url 'blog' %}"> blog</a>
-                                        <a class="dropdown-item" href="{% url 'singleblog' %}">Single blog</a>
-                                    </div>
-                                </li>
-                                
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'contact'  %}">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="hearer_icon d-flex">
-                            <div class="dropdown cart">
-                                <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="ti-bag"></i>
-                                </a>
-                                <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <div class="single_product">
-    
-                                    </div>
-                                </div> -->
-                            </div>
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
-                            
-                            {% if request.user.is_authenticated %}
-                            {% comment %} <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'user_logout' %}">
-                                {% csrf_token %}
-                                <a href="">
-                                    <span class="mr-sm-2">{{request.user.username}}</span>
-                                </a>
-                                <input type="submit" class="btn btn-outline-danger my-2 my-sm-0" value="Logout">
-                            </form> {% endcomment %}
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                   {{request.user.username}}
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Information</a>
-                                    <a class="dropdown-item" href="#">Update Profile</a>
-                                    <a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                    <a class="dropdown-item" href="{% url 'blog' %}"> blog</a>
+                                    <a class="dropdown-item" href="{% url 'singleblog' %}">Single blog</a>
                                 </div>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'contact'  %}">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="hearer_icon d-flex">
+                        {% if not request.user.is_authenticated %}
+                            <div class="dropdown cart">
+                                <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                     <i class="ti-bag"></i>
+                                </a>
                             </div>
-                            {% endif %}
+                            <a id="search_1" href="javascript:void(0)" ><i class="ti-search" ></i></a> 
+                     
+                        {% endif %}
+                        {% if request.user.is_authenticated %} 
+                        {% comment %}
+                        <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'user_logout' %}">
+                            {% csrf_token %}
+                            <a href="">
+                                <span class="mr-sm-2">{{request.user.username}}</span>
+                            </a>
+                            <input type="submit" class="btn btn-outline-danger my-2 my-sm-0" value="Logout">
+                        </form> {% endcomment %}
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                   {{request.user.username}} <i class="far fa-user"></i>
+                                </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="#">Information</a>
+                                <a class="dropdown-item" href="#">Update Profile</a>
+                                <a id="search_1" href="javascript:void(0)" class="dropdown-item"><i class="ti-search" style="color:white"></i></a> 
+                                <a class="dropdown-item">
+                                        <i class="ti-bag" style="color:white"></i>
+                                </a>
+                                <a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a>
+
+                            </div>
                         </div>
-                    </nav>
-                </div>
+                        {% endif %}
+                    </div>
+                </nav>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
+    </div>
+    <div class="search_input" id="search_input_box">
+        <div class="container ">
+            <form class="d-flex justify-content-between search-inner">
+                <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+                <button type="submit" class="btn"></button>
+                <span class="ti-close" id="close_search" title="Close Search"></span>
+            </form>
         </div>
-    </header>
-    <!-- Header part end-->
+    </div>
+</header>
+<!-- Header part end-->
