--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -386,7 +386,22 @@
                             </div>
                         </div>
                         <div class="col-lg-12 text-center">
-                            <a href="#" class="btn_2">More Items</a>
+                            <nav aria-label="...">
+                                <ul class="pagination" style="margin: auto;
+    width: 234px;">
+                                    <li class="page-item disabled">
+                                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                    </li>
+                                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                    <li class="page-item ">
+                                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">Next</a>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
