--- a/app/templates/modules/header.html
+++ b/app/templates/modules/header.html
@@ -16,14 +16,10 @@
                                 <a class="nav-link" href="{% url 'index' %}">Home</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link"  href="{% url 'category' %}"id="navbarDropdown_1" >
                                         Shop
                                     </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                    <a class="dropdown-item" href="{% url 'category'  %}"> shop category</a>
-                                    <a class="dropdown-item" href="{% url 'single-product' 1  %}">product details</a>
-
-                                </div>
+                                
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
